grocery-app/k8/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocery-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocery-frontend
  template:
    metadata:
      labels:
        app: grocery-frontend
    spec:
      containers:
        - name: grocery-frontend
          image: docker_frontend:latest  # Local Minikube image
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: grocery-frontend-service
spec:
  selector:
    app: grocery-frontend
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
